# segment-app-tflite

./: Makefile  main.py  pyproject.toml
src/backend/controllers/: __init__.py  segment.py
src/backend/core/constants/: __init__.py  paths.py
src/backend/core/handlers/: __init__.py  tflite_handler.py
src/backend/services/: __init__.py  segment.py
src/backend/utils/: __int__.py  pre_process.py  read_files.py
src/frontend/: package-lock.json
src/frontend/app/: index.tsx
src/frontend/components/Button/: index.tsx  styles.ts
src/frontend/components/ImagePreview/: index.tsx  styles.ts
